--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icons/active/
+    - assets/icons/inactive/
+    - assets/icons/bottom_navigation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
