--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,7 +47,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>FLTEnableImpeller</key>
-	<false/>
+	<!-- <key>FLTEnableImpeller</key>
+	<false/> -->
 </dict>
 </plist>
